fix java 11 deprecation
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>